--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+# which package needs 'future' package?
 numpy>=1.15.3
 h5py>=2.8.0
 statsmodels>=0.9.0
 scikit-learn>=0.20.1
-torch>=1.2.0,<=1.5
+torch>=1.2.0,<=1.6.0
